style: Add new colors and new mouses Styles Color only

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 <div>
                     <select name="model" id="model_product">
                         <option value="viperUltimate">Viper Ultimate 8KHz - Wired</option>                    
+                        <option value="viperUltimateCyberpunk">Viper Ultimate 8KHz Cyberpunk Edition - Wifi</option>                    
+                        <option value="viperUltimateRose">Viper Ultimate 8KHz Rose - Wifi</option>                    
                     </select>
                 </div>
                 <div>
